--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-cookie": "^1.2.6",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "json-server": "^0.12.0",
